The name is shorter.

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "A rental ember example tutorial app.",
+  "name": "An ember tutorial app.",
   "description": "Simple",
   "repository": "https://github.com/orbanbotond/ember-tutorial",
   "keywords": ["ember", "node", "js"]
